--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ navbar-links:
     - Dennis Span : "https://dennisspan.com/"
     - Julian Mooren: "https://citrixguyblog.com/"
     - Bas Van Kaam: "https://www.basvankaam.com/"
+    - Ryan Mangan: "https://ryanmangansitblog.com/"
     - World of EUC: "https://worldofeuc.github.io/Website/"
     - CUGC: "https://www.mycugc.org/page/home-cugc"
   Toolbox:
