--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ navbar-links:
     - World of EUC: "https://worldofeuc.github.io/Website/"
     - CUGC: "https://www.mycugc.org/page/home-cugc"
   Toolbox:
+    - Bicep: "https://runasradio.com/Shows/Show/822"
     - Nerdio: "https://getnerdio.com/"
   About Me: "aboutme"
   #Author's home: "https://makeitcloudy.pl/#"
