--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ social-network-links:
 # facebook: deanattali
   github: makeitcloudy
   twitter: ostrowski_piotr
-  patreon: DeanAttali
+#  patreon: DeanAttali
   youtube: makeitcloudy
 #  medium: yourname
 #  reddit: yourname
@@ -117,7 +117,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+url-pretty: "makeitcloudy.pl"
 
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
