--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ social-network-links:
   github: makeitcloudy
   twitter: ostrowski_piotr
 #  patreon: DeanAttali
-  youtube: "https://www.youtube.com/@makeitcloudy"
+  youtube: "@makeitcloudy"
 #  medium: yourname
 #  reddit: yourname
   linkedin: piotr-ostrowski-78b95072
